@@ -26,12 +26,15 @@ import org.powermock.modules.junit4.PowerMockRunner;
 import samples.singleton.SimpleStaticService;
 import samples.singleton.StaticService;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.fail;
+import static org.mockito.Matchers.any;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.when;
+import static org.powermock.api.mockito.PowerMockito.doNothing;
 import static org.powermock.api.mockito.PowerMockito.doThrow;
 import static org.powermock.api.mockito.PowerMockito.mockStatic;
 import static org.powermock.api.mockito.PowerMockito.spy;
@@ -209,4 +212,17 @@ public class MockStaticTest {
 
         assertEquals("something", captor.getValue());
     }
+
+	@Test
+	public void testMockStaticWithExpectations_withDo() throws Exception {
+		final String argument = "hello";
+
+		mockStatic(StaticService.class);
+
+		doNothing().when(StaticService.class,"sayHello",any(String.class));
+
+		StaticService.sayHello(argument);
+
+		assertThat(StaticService.messageStorage).isNull();
+	}
 }
