@@ -19,4 +19,12 @@
         <module>module-impl</module>
         <module>module-test</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+    </dependencies>
 </project>
